--- a/EXERCICIOS 1/022/fundo006.html
+++ b/EXERCICIOS 1/022/fundo006.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> exercicios fundo!</title>
+    <title> exercicios fundo fixo!</title>
     <style>
 
-        body{
+        body{/*
             height: 98vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-repeat:no-repeat ;
             background-position: center top;
-            background-size: 100% 100%;
+            background-size: cover;
+            background-attachment: fixed s;*/
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             margin: auto;
             padding: 10px;
             border-radius: 10px;
@@ -32,7 +35,31 @@
         <h1> testando imagens de fundo </h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate autem in dolorum quis aut rerum temporibus, expedita, quibusdam sunt, incidunt labore velit? Quidem similique natus itaque fugiat, at aperiam aliquam.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore reprehenderit incidunt dolore quam reiciendis enim animi temporibus rem et tempora porro architecto eveniet laudantium iure harum, eius illum voluptas amet!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vitae accusamus impedit aspernatur, rerum quo, odit temporibus corrupti illo culpa quidem illum qui sunt perferendis consequatur voluptatem dolorum praesentium aperiam?
         </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum sapiente libero deleniti atque unde, provident a possimus perspiciatis obcaecati facere harum minus exercitationem. Corrupti laborum eaque itaque quis odio. Consequuntur!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repudiandae quam quos blanditiis laborum magni hic consectetur. Esse doloremque, vel sapiente eaque optio maiores eius asperiores, ipsum illo fugit eos?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum sapiente libero deleniti atque unde, provident a possimus perspiciatis obcaecati facere harum minus exercitationem. Corrupti laborum eaque itaque quis odio. Consequuntur!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repudiandae quam quos blanditiis laborum magni hic consectetur. Esse doloremque, vel sapiente eaque optio maiores eius asperiores, ipsum illo fugit eos?
+        </p><p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum sapiente libero deleniti atque unde, provident a possimus perspiciatis obcaecati facere harum minus exercitationem. Corrupti laborum eaque itaque quis odio. Consequuntur!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repudiandae quam quos blanditiis laborum magni hic consectetur. Esse doloremque, vel sapiente eaque optio maiores eius asperiores, ipsum illo fugit eos?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum sapiente libero deleniti atque unde, provident a possimus perspiciatis obcaecati facere harum minus exercitationem. Corrupti laborum eaque itaque quis odio. Consequuntur!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repudiandae quam quos blanditiis laborum magni hic consectetur. Esse doloremque, vel sapiente eaque optio maiores eius asperiores, ipsum illo fugit eos?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum sapiente libero deleniti atque unde, provident a possimus perspiciatis obcaecati facere harum minus exercitationem. Corrupti laborum eaque itaque quis odio. Consequuntur!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repudiandae quam quos blanditiis laborum magni hic consectetur. Esse doloremque, vel sapiente eaque optio maiores eius asperiores, ipsum illo fugit eos?
+        </p><p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum sapiente libero deleniti atque unde, provident a possimus perspiciatis obcaecati facere harum minus exercitationem. Corrupti laborum eaque itaque quis odio. Consequuntur!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repudiandae quam quos blanditiis laborum magni hic consectetur. Esse doloremque, vel sapiente eaque optio maiores eius asperiores, ipsum illo fugit eos?
+        </p>
+
     </main>
     
 </body>
