--- a/desafiohtml/d012/Index.html
+++ b/desafiohtml/d012/Index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blanc">Milton Duarte</a>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blanc">Milton Duarte</a></p>
         
     </header>
 
@@ -29,14 +29,16 @@
 
 
 
-<section class="imagem">
+<section class="imagem" id="img01">
 
         <p>
+            Não é mais como era antes <br>
+            É tudo abreviado <br>
             "Você" só tem duas letras <br>
             O "O" e o "E" foi riscado <br>
-            Para declarar o amor <br> <br>
+            Para declarar o amor <br>
             Basta botar uma flor <br>
-            E um coração desenhado . <br>
+            E um coração desenhado. <br>
         </p>
 
 </section>
@@ -68,7 +70,7 @@
     </section>
 
 
-<section class="imagem">
+<section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
